Fix header on safari

--- a/app/assets/stylesheets/stash_engine/ui.css
+++ b/app/assets/stylesheets/stash_engine/ui.css
@@ -5498,7 +5498,7 @@ html.no-details .o-showhide__summary {
   .c-header__logos {
     display: block;
     max-width: 50%;
-    margin: 0.5rem 0;
+    margin: 0.5rem 0 0;
   }
 }
 
@@ -5512,24 +5512,22 @@ html.no-details .o-showhide__summary {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
+.c-header__dash-logo-link div:nth-child(2) {
+  margin-left: 1rem;
+  padding-left: 1rem;
+  border-left: 2px solid rgb(78, 80, 80);
+}
 
 .c-header__dash-logo-svg {
   /* Blacklight/geoblacklight resets */
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
-  padding: 0 0 0.5rem;
   max-height: 2rem;
 }
 @media (min-width: 870px) {
   .c-header__dash-logo-svg {
-    width: 100%;
-    max-height: 2.75rem;
+    max-height: 3rem;
   }
-}
-.c-header__dash-logo-svg:nth-child(2) {
-  margin-left: 1rem;
-  padding-left: 1rem;
-  border-left: 2px solid rgb(78, 80, 80);
 }
 
 .c-header__nav {
